# proj_generator_cpp

./: CMakeLists.txt
include/: projectGenerator.hpp
src/: main.cpp  projectGenerator.cpp
templates/: CMakeLists.txt  launch.json  main.cpp
templates/RAYLIB/: main.cpp  raylib-fetch.template.txt  raylib-link.template.txt
templates/SDL/: main.cpp  sdl-copy-dll.template.txt  sdl-fetch.template.txt  sdl-link.template.txt
